--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                     <a class="nav-link" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#">PTFE</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
+                    <a class="nav-link" href="#">Products</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Application</a>
@@ -88,6 +88,31 @@
   </div>
 
 
+  <!---Two Column section--->
+  <div class="container-fluid padding">
+      <div class="row padding">
+        <div class="col-lg-6">
+          <h2 class="display-4">PTFE-Polytetra Fluoro Ethylene</h2>
+          <p class="lead">PTFE is often required for critical
+            applicationsin which a.o. high temperatures, chemicalresistance, low friction are important.
+          </p>
+          <p class="lead">
+            The main difference in the fluoropolymers is that PTFE is not
+            melt-processable while all other fluoropolymers are.
+          </p>
+          <p class="lead">
+            Standard PTFE is not suitable for injection molding,
+            blow molding or vacuum forming (though Moldflon is).
+          </p>
+          <p>
+          <a href="#" class="btn btn-primary">Learn More</a></p>
+        </div>
+        <div class="col-lg-6">
+          <img src="images/gears.jpg" class="img-fluid" id="img-ptf">
+        </div>
+      </div>
+      <hr>
+  </div>
 
     <!---Welcome--->
     <div class="container-fluid padding">
@@ -136,34 +161,6 @@
     </div>
 
 
-
-    <!---Two Column section--->
-    <div class="container-fluid padding">
-        <div class="row padding">
-          <div class="col-lg-6">
-            <h2 class="display-4">PTFE-Polytetra Fluoro Ethylene</h2>
-            <p class="lead">PTFE is often required for critical
-              applicationsin which a.o. high temperatures, chemicalresistance, low friction are important.
-            </p>
-            <p class="lead">
-              The main difference in the fluoropolymers is that PTFE is not
-              melt-processable while all other fluoropolymers are.
-            </p>
-            <p class="lead">
-              Standard PTFE is not suitable for injection molding,
-              blow molding or vacuum forming (though Moldflon is).
-            </p>
-            <p>
-            <a href="#" class="btn btn-primary">Learn More</a></p>
-          </div>
-          <div class="col-lg-6">
-            <img src="images/gears.jpg" class="img-fluid">
-          </div>
-        </div>
-        <hr>
-    </div>
-
-
     <!---Something I dunno--->
     <div class="container-fluid padding">
       <div class="row welcome text-center">
@@ -179,19 +176,23 @@
         <div class="col-md-6 col-lg-6">
           <div class="card">
             <img class="card-img-top" src="images/mac.jpg">
+            <div class="card-content">
             <h4 class="card-title">Macbook</h4>
             <p class="card-text padding">Macbooks are cool but pricy. And now some Crappy
               stuff I don't about. Just filling the space. Ahhh This is stupid.</p>
               <p><a href="#" class="btn btn-outline-secondary">See More</a></p>
             </div>
           </div>
+          </div>
           <div class="col-md-6 col-lg-6">
             <div class="card">
               <img class="card-img-top" src="images/chip.jpg">
+              <div class="card-content">
               <h4 class="card-title">Chipsets</h4>
               <p class="card-text padding">Macbooks have Chipsets. And now some Crappy
                 stuff I don't about. Just filling the space. Ahhh This is stupid.</p>
                 <p><a href="#" class="btn btn-outline-secondary">See More</a></p>
+              </div>
               </div>
             </div>
         </div>
@@ -202,7 +203,7 @@
       <div class="container-fluid padding">
         <div class="row text-center">
           <div class="col-12">
-            <img src="images/logo.jpg" alt="Logo Goes here">
+            <img src="images/logo.JPG" alt="Logo Goes here">
           </div>
       </div>
     </div>
