--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/cf15542e4f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>BB Engineering</title>
   </head>
   <body>
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="#">PTFE</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Products</a>
+                    <a class="nav-link" href="html/products.html">Products</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Application</a>
@@ -81,7 +81,7 @@
             bearings etc that I do not know About. right now.</p>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-          <a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">
+          <a href="html/products.html"><button type="button" class="btn btn-outline-secondary btn-lg">
             Products Gallery</button></a>
       </div>
     </div>
@@ -92,7 +92,7 @@
   <div class="container-fluid padding">
       <div class="row padding">
         <div class="col-lg-6">
-          <h2 class="display-4">PTFE-Polytetra Fluoro Ethylene</h2>
+          <h2 class="display-4 text-primary">PTFE-Polytetra Fluoro Ethylene</h2>
           <p class="lead">PTFE is often required for critical
             applicationsin which a.o. high temperatures, chemicalresistance, low friction are important.
           </p>
@@ -118,7 +118,7 @@
     <div class="container-fluid padding">
       <div class="row welcome text-center">
         <div class="col-12">
-          <h1 class="display-4">Building trust since 1998</h1>
+          <h1 class="display-4 text-primary">Building trust since 1998</h1>
           <hr>
         </div>
         <div class="col-12">
@@ -173,7 +173,7 @@
     <!---Cards cuz they look good--->
     <div class="container-fluid padding">
       <div class="row padding">
-        <div class="col-md-6 col-lg-6">
+        <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="card">
             <img class="card-img-top" src="images/mac.jpg">
             <div class="card-content">
@@ -184,7 +184,7 @@
             </div>
           </div>
           </div>
-          <div class="col-md-6 col-lg-6">
+          <div class="col-xs-12 col-sm-6 col-md-4">
             <div class="card">
               <img class="card-img-top" src="images/chip.jpg">
               <div class="card-content">
@@ -195,6 +195,17 @@
               </div>
               </div>
             </div>
+            <div class="col-sm-12 col-md-4">
+              <div class="card">
+                <img class="card-img-top" src="images/chip.jpg">
+                <div class="card-content">
+                <h4 class="card-title">Chipsets</h4>
+                <p class="card-text padding">Macbooks have Chipsets. And now some Crappy
+                  stuff I don't about. Just filling the space. Ahhh This is stupid.</p>
+                  <p><a href="#" class="btn btn-outline-secondary">See More</a></p>
+                </div>
+                </div>
+              </div>
         </div>
       </div>
 
