products pages added.

--- a/html/productPages/Gaskets.html
+++ b/html/productPages/Gaskets.html
@@ -7,7 +7,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/cf15542e4f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../../css/productCss/gaskets.css">
     <title>Gaskets-BB Engineering</title>
   </head>
@@ -52,12 +51,12 @@
       <div class="dropdown">
           <button class="dropbtn">Our Products</button>
           <div class="dropdown-content">
-            <a href="#">Gaskets</a>
-            <a href="Envelopes.html">Envelopes</a>
-            <a href="#">Below Seals</a>
-            <a href="#">Valve Components</a>
-            <a href="#">Nozzles</a>
-            <a href="#">Piston Rings</a>
+            <a href="Gaskets.html">PTFE Gaskets</a>
+            <a href="Envelopes.html">PTFE Envelopes</a>
+            <a href="belowSeals.html">PTFE Below Seals</a>
+            <a href="valve.html">PTFE Valve Components</a>
+            <a href="nozzels.html">PTFE Nozzles</a>
+            <a href="#">PTFE Piston Rings</a>
           </div>
       </div>
     </div>
