--- a/html/products.html
+++ b/html/products.html
@@ -7,7 +7,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/cf15542e4f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/products.css">
     <title>Products-BB Engineering</title>
   </head>
@@ -52,12 +51,12 @@
       <div class="dropdown">
           <button class="dropbtn">Our Products</button>
           <div class="dropdown-content">
-            <a href="./productPages/Gaskets.html">Gaskets</a>
-            <a href="./productPages/Envelopes.html">Envelopes</a>
-            <a href="#">Below Seals</a>
-            <a href="#">Valve Components</a>
-            <a href="#">Nozzles</a>
-            <a href="#">Piston Rings</a>
+            <a href="./productPages/Gaskets.html">PTFE Gaskets</a>
+            <a href="./productPages/Envelopes.html">PTFE Envelopes</a>
+            <a href="./productPages/belowSeals.html">PTFE Below Seals</a>
+            <a href="./productPages/valve.html">PTFE Valve Components</a>
+            <a href="./productPages/nozzels.html">PTFE Nozzles</a>
+            <a href="#">PTFE Piston Rings</a>
           </div>
       </div>
     </div>
@@ -111,7 +110,7 @@
             <h4 class="card-title">PTFE Below Seals</h4>
             <p class="card-text padding">Seal is an externally mounted seal for corrosive
               chemicals where contact with the media is to be avoided.</p>
-              <p><a href="#" class="btn btn-outline-secondary">See More</a></p>
+              <p><a href="./productPages/belowSeals.html" class="btn btn-outline-secondary">See More</a></p>
             </div>
             </div>
           </div>
@@ -127,7 +126,7 @@
           <h4 class="card-title">PTFE Valve Components</h4>
           <p class="card-text padding">These parts include valve seat(s), disc,
             glands, spacers, guides, bushings, and internal springs.</p>
-            <p><a href="#" class="btn btn-outline-secondary">See More</a></p>
+            <p><a href="./productpages/valve.html" class="btn btn-outline-secondary">See More</a></p>
           </div>
         </div>
         </div>
@@ -138,7 +137,7 @@
             <h4 class="card-title">PTFE Nozzles</h4>
             <p class="card-text padding">We manufacture world class PTFE nozzles
           that reduces scaling and build up of solids inside of lined components.</p>
-              <p><a href="#" class="btn btn-outline-secondary">See More</a></p>
+              <p><a href="./productPages/nozzels.html" class="btn btn-outline-secondary">See More</a></p>
             </div>
             </div>
           </div>
