--- a/html/productPages/nozzels.html
+++ b/html/productPages/nozzels.html
@@ -7,8 +7,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../css/productCss/envelopes.css">
-    <title>Envelopes-BB Engineering</title>
+    <link rel="stylesheet" href="../../css/productCss/nozzels.css">
+    <title>Nozzles-BB Engineering</title>
   </head>
   <body>
     <!--Navigation-->
@@ -64,75 +64,58 @@
 </div>
 </div>
 
+
+
 <div class="container">
   <div class="container-fluid">
     <div class="content">
-      <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-            <h3 class="display-4">PTFE Envelopes</h3>
+      <div class="row padding bg-light">
+          <div class="col-xs-12 col-sm-12 col-md-6">
+            <h3>PTFE Nozzles</h3>
             <hr>
             <h6>
-              <p>Envelope gaskets are produced with pure PTFE with a thickness of 0.5 mm.</p>
-              <p>Envelope gaskets have become popular for their special features
-                that enables them to be is used in severely corrosive services, excellent creep resistance
-                and high deformability. </p>
-              <p>The PTFE makes the envelope gasket suitable for use in the chemical, pharmaceutical and food industry.</p>
+              <p>PTFE Nozzles are effectively used in different business such as:</p>
+              <p>
+                <ul>
+                  <li>petrochemicals</li> <li>engineering</li> <li>beverage industry</li> <li>aeronautics</li> <li>fertilizers</li>
+                </ul>
+              </p>
+              <p>These are designed for containers for simple flow of material such as liquids and semi-liquids.</p>
+              <p>They are precise diameter for installation and discharge purposes.</p>
             </h6>
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-              <img src="../../images/envelopes.jpg" alt="gaskets" class="img-fluid"/>
+          <div class="col-xs-12 col-sm-12 col-md-6">
+            <img src="../../images/nozzles2.jpg" class="img-fluid">
           </div>
       </div>
-      <div class="types jumbotron">
-        <h3 class="display-4">Types of Envelopes</h3><br>
-        <div class="card-deck">
-          <div class="card border-light mb-3">
-            <div class="card-header">Silt type Envelopes</div>
-            <div class="card-body text-dark">
-              <p class="card-text">Slit type envelopes can be of different sizes according
-                to the application and the customer's requirements.</p>
-              <p class="card-text">The gasket outer dimension normally rests within the bolt hole circle and
-                the internal dimension is approximately equal to the nominal internal dimension of pipe.</p>
-              <p class="card-text">It resists sudden changes of temperature and possesses excellent dielectric
-                characteristics that widens up its scope of application in varied industries.</p>
-              <p class="card-text">It is tailor made as per requirements of customers.</p>
-            </div>
-          </div>
-          <div class="card border-light mb-3">
-            <div class="card-header">Milled type Envelope</div>
-            <div class="card-body text-dark">
-              <p class="card-text">Milled type envelope assures optimum performance
-                on any specific application.</p></p>
-              <p>They have become popular for use in severely corrosive services.
-                The inner dimension of the envelope fits flush with pipe bore and the outer
-                dimension rests within the bolts.</p>
-              <p>  It is also known as €œU€ type envelope.
-                It has excellent property of resistance to acids which protects the inserts.</p>
-              <p>It too is tailor made as per requirements of customers.</p>
-            </div>
-          </div>
-          </div>
+      <div class="row padding bg-light">
+        <div class="col-xs-12 col-sm-12 col-md-6">
+          <h3>More on Nozzles</h3>
+          <hr>
+          <p>These are mainly outlined in white color as they suit both the interior and exterior of storage containers.</p>
+          <p>One end of  PTFE Nozzles is completely threaded, which implies they can be easily installed in the manner of screw without any or least tools. </p>
+          <p>The provided nozzles have small opening at the back so that the contaminants do not flow with the material.</p>
         </div>
-        <div class="card border-dark mb-3">
-      <div class="card-header">Applications of PTFE Envelopes</div>
-      <div class="card-body text-dark">
-        <h5 class="card-title">PTFE Envelopes finds numerous applications like:</h5>
-        <p class="card-text">
-          <ul>
-          <li>stainless steel reactors</li>
-          <li>piping services</li>
-          <li>smalted vessel</li>
-          <li>Pharmaceutical</li>
-          <li>Anti-Buildup tanks, columns.
-          <li>flanges</li>
-          <li>glass lined reaction vessels</li>
-        </ul>
-      </p>
-      </div>
-      </div>
+        <div class="col-xs-12 col-sm-12 col-md-6">
+          <h3>Properties</h3>
+          <p>
+            <ul>
+              <li>Working Temperature -250 to+260 Celsius </li>
+              <li>Chemical Resistance</li>
+              <li>Fatigue Resistance</li>
+              <li>Thermal Stability</li>
+              <li>Maintenance free life</li>
+            </ul>
+          </p>
+        </div>
       </div>
     </div>
   </div>
+</div>
+
+
+
+
 
 
 <!---footer--->
