--- a/html/productPages/valve.html
+++ b/html/productPages/valve.html
@@ -7,8 +7,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../css/productCss/envelopes.css">
-    <title>Envelopes-BB Engineering</title>
+    <link rel="stylesheet" href="../../css/productCss/valve.css">
+    <title>Valve-BB Engineering</title>
   </head>
   <body>
     <!--Navigation-->
@@ -68,72 +68,67 @@
   <div class="container-fluid">
     <div class="content">
       <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-            <h3 class="display-4">PTFE Envelopes</h3>
+          <div class="col-xs-12 col-sm-12 col-md-12">
+            <h3>PTFE Valve Components</h3>
             <hr>
             <h6>
-              <p>Envelope gaskets are produced with pure PTFE with a thickness of 0.5 mm.</p>
-              <p>Envelope gaskets have become popular for their special features
-                that enables them to be is used in severely corrosive services, excellent creep resistance
-                and high deformability. </p>
-              <p>The PTFE makes the envelope gasket suitable for use in the chemical, pharmaceutical and food industry.</p>
+              <p>We design and deliver the best quality range of PTFE Valve Component to our valued customers.</p>
+              <p>PTFE Components are fabricated by highly creative work force that has got vast experience in this domain.</p>
+              <p>The range of our PTFE machined components and PTFE products consists of</p>
+              <p>seat rings,roof packing, seal cover, plug valve sleeve, wedge rings, 'O' rings, washes, bearings, balls etc</p>
+              <p>We make sure all these products are delivered only after stringent tests</p>
             </h6>
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-              <img src="../../images/envelopes.jpg" alt="gaskets" class="img-fluid"/>
-          </div>
       </div>
-      <div class="types jumbotron">
-        <h3 class="display-4">Types of Envelopes</h3><br>
-        <div class="card-deck">
-          <div class="card border-light mb-3">
-            <div class="card-header">Silt type Envelopes</div>
-            <div class="card-body text-dark">
-              <p class="card-text">Slit type envelopes can be of different sizes according
-                to the application and the customer's requirements.</p>
-              <p class="card-text">The gasket outer dimension normally rests within the bolt hole circle and
-                the internal dimension is approximately equal to the nominal internal dimension of pipe.</p>
-              <p class="card-text">It resists sudden changes of temperature and possesses excellent dielectric
-                characteristics that widens up its scope of application in varied industries.</p>
-              <p class="card-text">It is tailor made as per requirements of customers.</p>
-            </div>
-          </div>
-          <div class="card border-light mb-3">
-            <div class="card-header">Milled type Envelope</div>
-            <div class="card-body text-dark">
-              <p class="card-text">Milled type envelope assures optimum performance
-                on any specific application.</p></p>
-              <p>They have become popular for use in severely corrosive services.
-                The inner dimension of the envelope fits flush with pipe bore and the outer
-                dimension rests within the bolts.</p>
-              <p>  It is also known as €œU€ type envelope.
-                It has excellent property of resistance to acids which protects the inserts.</p>
-              <p>It too is tailor made as per requirements of customers.</p>
-            </div>
-          </div>
-          </div>
+      <div class="row bg-light padding">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+          <h4>PTFE Seat</h4>
+          <hr>
+          <p>We manufacture a wide range of seat configurations across many industries supplying major global customers.</p>
+          <p>We manufacture all types of valves. Some are:</p>
+          <p>
+            <ul>
+              <li>Ball Valves</li>
+              <li>Butterfly valves</li>
+              <li>Gate valves</li>
+              <li>chokes and</li>
+              <li>plug valves</li>
+            </ul>
+          </p>
         </div>
-        <div class="card border-dark mb-3">
-      <div class="card-header">Applications of PTFE Envelopes</div>
-      <div class="card-body text-dark">
-        <h5 class="card-title">PTFE Envelopes finds numerous applications like:</h5>
-        <p class="card-text">
-          <ul>
-          <li>stainless steel reactors</li>
-          <li>piping services</li>
-          <li>smalted vessel</li>
-          <li>Pharmaceutical</li>
-          <li>Anti-Buildup tanks, columns.
-          <li>flanges</li>
-          <li>glass lined reaction vessels</li>
-        </ul>
-      </p>
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+          <br>
+          <img src="../../images/seat.jpg" class="img-fluid">
+        </div>
       </div>
+
+      <div class="row padding">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+          <img src="../../images/spring.jpg" class="img-fluid">
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+          <br>
+          <h4>PTFE Spring</h4>
+          <hr>
+          <p>We are renowned manufacturer of PTFE Spring</p> <p>that are used in areas where elastomeric seals
+          cannot meet the </p> <p>frictional, temperature,or chemical resistance requirements of the application.</p>
+        </div>
       </div>
+      <div class="row bg-light padding">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+          <h4>PTFE Body Ring</h4>
+          <hr>
+          <p>We are well equipped with the facilities needed to design,</p>
+          <p>manufacture and test our PTFE body ring. We have built our brand on quality,</p>
+          <p>innovation and customer service to emerge as a preferred supplier to some of the largest OEMs globally.</p>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+          <img src="../../images/valve.jpg" class="img-fluid">
+        </div>
       </div>
     </div>
   </div>
-
+</div>
 
 <!---footer--->
   <footer>
