--- a/html/productPages/belowSeals.html
+++ b/html/productPages/belowSeals.html
@@ -56,7 +56,7 @@
             <a href="belowSeals.html">PTFE Below Seals</a>
             <a href="valve.html">PTFE Valve Components</a>
             <a href="nozzels.html">PTFE Nozzles</a>
-            <a href="#">PTFE Piston Rings</a>
+            <a href="rings.html">PTFE Rings</a>
           </div>
       </div>
     </div>
