--- a/html/products.html
+++ b/html/products.html
@@ -56,7 +56,7 @@
             <a href="./productPages/belowSeals.html">PTFE Below Seals</a>
             <a href="./productPages/valve.html">PTFE Valve Components</a>
             <a href="./productPages/nozzels.html">PTFE Nozzles</a>
-            <a href="#">PTFE Piston Rings</a>
+            <a href="./productPages/rings.html">PTFE Rings</a>
           </div>
       </div>
     </div>
@@ -149,7 +149,7 @@
               <p class="card-text padding">Being the leading manufacturers in the
           industry, we bring PTFE Piston Ring in Pure PTFE and in other grades
           Glass,Graphite.</p>
-                <p><a href="#" class="btn btn-outline-secondary">See More</a></p>
+                <p><a href="./productPages/rings.html" class="btn btn-outline-secondary">See More</a></p>
               </div>
               </div>
             </div>
